<?xml version="1.0"?>

    <resources>

    <string name="app_name">FitnessApp</string>

    <string name="action_sign_in_short">REGISTER</string>

    <string name="searchBar">Bench Press</string>

    <string name="navigation_drawer_open">Open</string>

    <string name="navigation_drawer_close">Close</string>

    <string name="action_update">Update</string>

    <string name="action_changeprofile">Change Profile Photo</string>

    <string name="email">Email</string>

    <string name="height">Height (in cms)</string>

    <string name="weight">Weight (in lbs)</string>

    <string name="age">Age</string>

    <string name="firstname">First Name</string>

    <string name="lastname">Last Name</string>

    <string name="workout">Enter Workout Name</string>

    <string name="minimum_password">Password must be atleast 6 characters!</string>

    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <string name="change_email">Change Email</string>

    <string name="change_password">Change Password</string>

    <string name="send_password_reset_email">Send Password reset email</string>

    <string name="remove_user">Remove user</string>

    <string name="new_pass">New Password</string>

    <string name="title_activity_profile">Firebase</string>

    <string name="title_activity_login">Sign in</string>

    <string name="hint_email">Email</string>

    <string name="hint_password">Password</string>

    <string name="hint_name">Fullname</string>

    <string name="btn_login">LOGIN</string>

    <string name="btn_link_to_register">Not a member? Get registered now!</string>

    <string name="btn_link_to_login">Already registered. Login here!</string>

    <string name="title_activity_reset_password">ResetPasswordActivity</string>

    <string name="btn_forgot_password">Forgot your password?</string>

    <string name="btn_reset_password">RESET PASSWORD</string>


    -<string name="btn_back">
</string>

    <string name="hint_new_email">New Email</string>

    <string name="btn_change">Change</string>

    <string name="btn_send">Send</string>

    <string name="btn_remove">Remove</string>

    <string name="btn_sign_out">Sign Out</string>

    <string name="lbl_forgot_password">Forgot password?</string>

    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="settings_name">Account Settings</string>

    <string name="profile_update_successful">Successfully updated user information!</string>


    -<string-array name="muscle_categories">

    <item>Chest</item>

    <item>Triceps</item>

    <item>Shoulders</item>

    <item>Biceps</item>

    <item>Traps</item>

    <item>Abs</item>

    <item>Quads</item>

    <item>Lats</item>

    <item>Glutes</item>

</string-array>

</resources>