...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColorHint="@color/colorDarkBlue"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
...
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/roundbutton"
                    android:text="@string/btn_login"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/btn_signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:text="@string/btn_link_to_register"
                    android:textColor="@color/white"
...
